--- a/package.json
+++ b/package.json
@@ -1,50 +1,24 @@
 {
   "name": "basscss-responsive-borders",
   "version": "0.0.1",
-  "description": "Responsibve Border styles module for Basscss",
+  "description": "Responsive border styles module for Basscss",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/basscss/borders.git"
+    "url": "git+https://github.com/wdmtech/basscss-responsive-borders.git"
   },
   "keywords": [
-    "CSS",
-    "OOCSS",
+    "Css",
     "Basscss",
-    "Rework"
+    "OOCSS"
   ],
-  "author": {
-    "name": "Will Murray"
-  },
+  "author": "Will Murray",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/basscss/borders/issues"
+    "url": "https://github.com/wdmtech/basscss-responsive-borders/issues"
   },
-  "homepage": "https://github.com/basscss/borders",
-  "dependencies": {
-    "basscss-defaults": "^2.0.1"
-  },
-  "gitHead": "6cb7e85df1b2c2dd5d1be6ba12a4c5e95ed2e123",
-  "_id": "basscss-borders@2.0.4",
-  "scripts": {},
-  "_shasum": "c702ee864fe4a68b9cf92f391c1c7e8735b3a5c5",
-  "_from": "basscss-borders@latest",
-  "_npmVersion": "3.1.0",
-  "_nodeVersion": "0.12.2",
-  "_npmUser": {
-    "name": "jxnblk",
-    "email": "jxnblk@gmail.com"
-  },
-  "dist": {
-    "shasum": "c702ee864fe4a68b9cf92f391c1c7e8735b3a5c5",
-    "tarball": "http://registry.npmjs.org/basscss-borders/-/basscss-borders-2.0.4.tgz"
-  },
-  "maintainers": [
-    {
-      "name": "jxnblk",
-      "email": "jxnblk@gmail.com"
-    }
-  ],
-  "directories": {},
-  "_resolved": "https://registry.npmjs.org/basscss-borders/-/basscss-borders-2.0.4.tgz",
-  "readme": "ERROR: No README data found!"
+  "homepage": "https://github.com/wdmtech/basscss-responsive-borders#readme"
 }
